--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
 @import './components/reset.css';
 @import './components/layout.css';
-@import './components/controls.css'
+@import './components/controls.css';
+@import './components/render.css';
