--- a/css/components/controls.css
+++ b/css/components/controls.css
@@ -23,7 +23,11 @@
                 width: 20%;
                 height: 100%;
             }
-            /*    .image > img {} */
+                .image > img {
+                    display: inline-block;
+                    width: 100%;
+                    height: 100%;
+                }
             .inputInfo {
                 display: inline-block;
                 float: left;
