--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,4 @@
 @import './components/layout.css';
 @import './components/controls.css';
 @import './components/render.css';
+@import './components/info.css';
