--- a/css/components/render.css
+++ b/css/components/render.css
@@ -10,6 +10,24 @@
         width: 80%;
         height: 400px; /* 100% */
     }
+        #field > .grid {
+            background-color: #aaa;
+            display: grid;
+            grid-template-columns: repeat(12, 1fr);
+            grid-template-rows: repeat(12, 1fr);
+            width: 100%;
+            height: 100%;
+        }
+            .grid .spot {
+                background-color: #222;
+                display: inline-block;
+                grid-column: auto / span 1;
+                width: 100%;
+                height: 100%;
+            }
+            .grid .spot.full {
+                background-color: #ddd;
+            }
     .edit {
         display: inline-block;
         float: left;
