--- a/css/components/render.css
+++ b/css/components/render.css
@@ -13,8 +13,6 @@
         #field > .grid {
             background-color: #aaa;
             display: grid;
-            grid-template-columns: repeat(12, 1fr);
-            grid-template-rows: repeat(12, 1fr);
             width: 100%;
             height: 100%;
         }
@@ -28,19 +26,19 @@
             .grid .spot.full {
                 background-color: #222;
             }
-    .edit {
+    #edit {
         display: inline-block;
         float: left;
         width: 20%;
         height: 100%;
     }
-        .edit > div {
+        #edit > div {
             display: grid;
             place-items: center;
             width: 100%;
             height: 50%;
         }
-            .edit button {
+            #edit button {
                 display: inline-block;
                 width: 80%;
                 height: 80%;
