--- a/css/components/render.css
+++ b/css/components/render.css
@@ -22,6 +22,7 @@
                 grid-column: auto / span 1;
                 width: 100%;
                 height: 100%;
+                transition: ease-in-out 0.1s;
             }
             .grid .spot.full {
                 background-color: #222;
