--- a/css/components/info.css
+++ b/css/components/info.css
@@ -1,7 +1,8 @@
 .info {
     display: inline-block;
     width: 100%;
-    margin-top: 10px;
+    height: 15vh;
+    margin-top: 2vh;
 }
     #primeFrame {
         display: grid;
