--- a/css/components/render.css
+++ b/css/components/render.css
@@ -1,14 +1,14 @@
 .render {
     display: inline-block;
     width: 100%;
-    margin-top: 10px;
+    height: 60vh;
 }
     #field {
         display: grid;
         float: left;
         place-items: center;
         width: 80%;
-        height: 500px; /* 100% */
+        height: 100%;
     }
         #field > .grid {
             background-color: hsla(85, 35%, 50%);
